# answer-engineering

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conventions/: pyguide-extension.md
conventions/enforcement/: README.md  __init__.py  find_any_usage.py  find_crlf_line_endings.py  find_global_builders.py  find_type_checking_guards.py  inventory_docstrings.py  measure_conventions_metrics.py
docs/: README.md
docs/current/: architecture.md  capabilities.md  codebase-reality.md  paper-artifacts.md  reproducibility.md  runtime-model.md  telemetry-schema.md  trajectory-taxonomy.md
docs/dev/: extension-points.md  golden-snapshots.md  runtime-entrypoints.md
docs/gaps/: convention-compliance.md  functionality-roadmap.md
docs/paper/: chktexrc  main.tex  references.bib
docs/rules/: language-reference.md
docs/users/: writing-rules.md
docs/vision/: system-vision.md  trajectory-control.md
notebooks/: quickstart.ipynb  reproduce.ipynb
scripts/: apply_docstrings_from_yaml.py  check  clean_notebook_widgets.py  download-issues.sh  extract_docstrings_to_yaml.py  subpackage_deps.py  wrap_docstrings.py
src/ae_paper_reproduction/: __init__.py  api.py
src/answer_engineering/: __init__.py  extensions.py
stubs/datasets/: __init__.pyi
stubs/huggingface_hub-stubs/: _snapshot_download.pyi
stubs/tqdm/: auto.pyi  std.pyi
stubs/transformers/: __init__.pyi
tests/: conftest.py  regenerate_goldens.py  test_decode_streaming_renderer_integration.py  test_docs_examples_parse.py  test_event_telemetry_projection.py  test_lark_parser_equivalence.py  test_multirule_eval.py  test_no_placeholder_core.py  test_notebook_editing_smoke.py  test_phase_e_boundaries.py  test_plan_ir_golden_snapshot.py  test_planrunner_single_step_trace_smoke.py  test_prompt_echo_regression.py  test_prompt_golden.py  test_rules_ast_golden_snapshot.py  test_rules_syntax_error.py  test_runtime_event_order_is_deterministic.py  test_runtime_stop_tokens.py  test_runtime_telemetry_aggregator.py  test_stream_generation_config.py  test_stream_session_verbosity_modes.py  test_telemetry.py  test_text_patterns_golden.py
tests/_support/: core_helpers.py  runtime_harness.py
tests/core/: __init__.py  (+38 more)
(+175 files in other folders)
